tui/src/snapshots/codex_tui__app_server_render__tests__render_only_potter_round_started.snap
---
source: tui/src/app_server_render.rs
expression: rendered
---
• CodexPotter: iteration round 1/15
