tui/src/snapshots/codex_tui__app_server_render__tests__render_only_potter_session_started_project_hint.snap
---
source: tui/src/app_server_render.rs
expression: hint_rendered
---
  ↳ Project created: .codexpotter/projects/2026/01/29/11/MAIN.md
