tui/src/snapshots/codex_tui__app_server_render__tests__render_only_round_banner_reconnecting_status_vt100.snap
---
source: tui/src/app_server_render.rs
expression: terminal.backend().vt100().screen().contents()
---
• CodexPotter: iteration round 1/10

• Round 1/10 · Reconnecting... 2/10 (0s) · 100% context left
  └ Stream disconnected before completion: error sending request for url (...)


› Assign new task to CodexPotter

  ctrl+g external editor
