tui/src/snapshots/codex_tui__app_server_render__tests__render_only_streaming_partial_vt100.snap
---
source: tui/src/app_server_render.rs
expression: terminal.backend().vt100().screen().contents()
---





















› Explain this: `1 + 1`.


• ## Result

  - Answer: 2
